--- a/counter 2/counter/Base.lproj/Main.storyboard
+++ b/counter 2/counter/Base.lproj/Main.storyboard
@@ -408,12 +408,18 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                 <state key="normal" title="Arm"/>
+                                <connections>
+                                    <action selector="arm:" destination="kBK-qZ-5vV" eventType="touchUpInside" id="C3h-2h-Wtq"/>
+                                </connections>
                             </button>
                             <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="S7M-tq-frZ">
                                 <rect key="frame" x="163" y="555" width="119" height="60"/>
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <fontDescription key="fontDescription" type="system" pointSize="40"/>
                                 <state key="normal" title="Trigger"/>
+                                <connections>
+                                    <action selector="trigger:" destination="kBK-qZ-5vV" eventType="touchUpInside" id="Xbj-1u-GX4"/>
+                                </connections>
                             </button>
                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" fixedFrame="YES" text="0" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="bpb-DL-QmR">
                                 <rect key="frame" x="434" y="294" width="157" height="96"/>
